# ood

./: CMakeLists.txt  README.md
lw1/shapes/: .gitignore  .golangci.yml  Makefile  go.mod  go.sum
lw1/shapes/cmd/: commandhandler.go  main.go
lw1/shapes/pkg/model/: color.go  shape.go
lw1/shapes/pkg/picture/: picture.go
lw1/shapes/pkg/tests/: canvas_test.go  mockcanvas.go  mockpicture.go  mockshape.go  picture_test.go  shape_test.go
lw1/simuduck/: .gitignore  Makefile  go.mod
lw1/simuduck/cmd/: main.go
lw1/simuduck/pkg/behavior/: dance.go  fly.go  quack.go
lw1/simuduck/pkg/duck/: decoy.go  duck.go  mallard.go  model.go  redhead.go  rubber.go
lw1/simuduck/pkg/tests/: behavior_test.go  mocks.go
lw10/: diagram.md
lw10/src/: CMakeLists.txt  main.cpp
lw10/src/api/: webeditor.proto
lw10/src/app/: Commands.h  HistoryManager.cpp  HistoryManager.h  ICommand.h  MacroCommand.h
lw10/src/client/: client.cpp  client.h
lw10/src/domain/: Document.cpp  Document.h  Geometry.h  IRepository.h  IShape.h  Primitive.cpp  Primitive.h  ShapeGroup.cpp  ShapeGroup.h
lw10/src/server/: server.cpp
lw10/src/view/: CanvasWidget.cpp  CanvasWidget.h  MainWindow.cpp  MainWindow.h
lw10/src/viewModel/: JsonRepository.cpp  JsonRepository.h  ShapeViewModel.h  ViewModel.cpp  ViewModel.h
lw10/test/: CMakeLists.txt  Document_tests.cpp  Frame_tests.cpp  Primitive_tests.cpp  ShapeGroupTests.cpp
lw2/weather-station/: .gitignore  .golangci.yml  Makefile  go.mod
lw2/weather-station/cmd/: main.go
lw2/weather-station/pkg/model/: eventbus.go  events.go  observable.go  observers.go  station.go  statistics.go
lw2/weather-station/pkg/tests/: mockobserver.go  observable_test.go
lw3/coffee/: .golangci.yml  Makefile  go.mod
lw3/coffee/cmd/: main.go
lw3/coffee/pkg/model/: beverage.go  condiment.go
lw3/streams/src/: CMakeLists.txt  IDataStream.h  StreamDecorator.h  main.cpp
lw3/streams/src/compress-streams/: CompressingOutputStream.cpp  CompressingOutputStream.h  Compressor.cpp  Compressor.h  DecompressingInputStream.cpp  DecompressingInputStream.h
lw3/streams/src/crypt-streams/: DecryptingInputStream.cpp  DecryptingInputStream.h  EncryptingOutputStream.cpp  EncryptingOutputStream.h  SubstitutionTable.cpp  SubstitutionTable.h
lw3/streams/src/file-streams/: FileInputStream.cpp  FileInputStream.h  FileOutputStream.cpp  FileOutputStream.h
lw3/streams/src/memory-streams/: MemoryInputStream.cpp  MemoryInputStream.h  MemoryOutputStream.cpp  MemoryOutputStream.h
lw3/streams/tests/: CMakeLists.txt  Streams_test.cpp  TempFilesGenerator.cpp  TempFilesGenerator.h
lw4/pictures/: .gitignore  Makefile  diagram.md  go.mod  go.sum  input.txt
lw4/pictures/cmd/: main.go
lw4/pictures/pkg/designer/: model.go
lw4/pictures/pkg/model/: draft.go  shape.go
lw4/pictures/pkg/painter/: model.go
lw4/pictures/pkg/tests/: canvas_test.go  color_test.go  designer_test.go  draft_test.go  ellipse_test.go  factory_test.go  mockcanvas.go  rectangle_test.go  regularpolygon_test.go  triangle_test.go
lw5/editor/: Makefile  go.mod
lw5/editor/cmd/: commandhandler.go  main.go
lw5/editor/pkg/model/: command.go  document.go  history.go  image.go  paragraph.go
lw5/editor/pkg/service/: document.go
lw5/editor/pkg/tests/: document_test.go  history_test.go  image_test.go  mockcommand.go  paragraph_test.go
lw6/: CMakeLists.txt
lw6/shapes-adapters/src/: CMakeLists.txt  diagram.md  main.cpp
lw6/shapes-adapters/src/adapters/: ModernGraphicsRendererClassAdapter.cpp  ModernGraphicsRendererClassAdapter.h  ModernGraphicsRendererObjectAdapter.cpp  ModernGraphicsRendererObjectAdapter.h
lw6/shapes-adapters/src/libs/: Canvas.cpp  Canvas.h  CanvasDrawable.cpp  CanvasDrawable.h  GraphicsRenderer.cpp  GraphicsRenderer.h
lw6/shapes-adapters/tests/: CMakeLists.txt  ShapesAdapters_test.cpp
lw7/slides/: .gitignore  .golangci.yml  Makefile  go.mod  go.sum
lw7/slides/cmd/: main.go
lw7/slides/pkg/model/: canvas.go  color.go  group.go  shape.go
lw8/gumballmachine/: .gitignore  .golangci.yml  Makefile  go.mod
lw8/gumballmachine/cmd/: main.go
lw9/: CMakeLists.txt
lw9/cow/src/: CMakeLists.txt  CoW.h  Drawer.cpp  Drawer.h  Image.cpp  Image.h  Tile.cpp  Tile.h  main.cpp
(+47 files in other folders)
